Update video issue about.html

--- a/about.html
+++ b/about.html
@@ -33,14 +33,14 @@
 
             <div class="video-container">
                 <video width="560" height="315" controls>
-                    <source src="second-video.mp4" type="video/mp4">
+                    <source src="second-video.MP4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
 
             <div class="video-container">
                 <video width="560" height="315" controls>
-                    <source src="third-video.mp4" type="video/mp4">
+                    <source src="third-video.MP4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
