video problem, finally solved

--- a/about.html
+++ b/about.html
@@ -31,6 +31,20 @@
                 </video>
             </div>
 
+                        <div class="video-container">
+                <video width="560" height="315" controls>
+                    <source src="second-video.MP4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+
+            <div class="video-container">
+                <video width="560" height="315" controls>
+                    <source src="third-video.MP4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+
             <p class="centered-text end-text">Yeaah, cringe.</p>
         </section>
     </main>
