--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- For icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="contactpage">
 
@@ -26,7 +26,7 @@
             
             <div class="contact-item">
                 <i class="fab fa-instagram"></i>
-                <a href="https://www.instagram.com/im.rasulov" target="_blank">@im.rasulov</a>
+                <a href="https://www.instagram.com/9rslv" target="_blank">@javlonbek</a>
             </div>
 
             <div class="contact-item">
@@ -38,11 +38,6 @@
                 <i class="fab fa-twitter"></i>
                 <a href="https://twitter.com/rrasulovv" target="_blank">@rrasulovv</a>
             </div>
-
-            <div class="contact-item">
-                <i class="fab fa-spotify"></i>
-                <a href="https://open.spotify.com/user/31yyyiyyzqw5kn3evgabz6b27hty?si=861abbe1db0e4a44" target="_blank">Spotify</a>
-            </div>
         </section>
     </main>
 
@@ -51,3 +46,4 @@
     </footer>
 </body>
 </html>
+
